Fixed footer spacing

--- a/frontend/src/app/components/map/map.component.scss
+++ b/frontend/src/app/components/map/map.component.scss
@@ -3,7 +3,6 @@
   }
 
   mat-card{
-    width:95%;
     margin: auto;
     text-align: right;
     background-color: #fffef0;
