--- a/frontend/src/app/components/team/team.component.scss
+++ b/frontend/src/app/components/team/team.component.scss
@@ -1,3 +1,13 @@
-h3 {
-    font-size: 1em;
-}
+html, body {
+    height: 100%;
+    margin: 0;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
+  
+  .content {
+    flex: 1;
+  }
